--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title> سياسة الخصوصية — راحه توصيل الطلبات وكل شي  / Rahad Comfort food delivery service and everything</title>
+  <title> سياسة الخصوصية — راحة توصيل الطعام وكل شيء / The convenience of food delivery and everything else</title>
   <style>
     :root{--bg:#f8fafc;--card:#ffffff;--accent:#0b74da;--muted:#6b7280}
     body{font-family:Tahoma, Arial, Helvetica, sans-serif;background:var(--bg);margin:0;padding:24px;color:#0f172a}
@@ -27,15 +27,15 @@
     <header>
       <div class="logo">R</div>
       <div>
-        <h1>سياسة الخصوصية — راحه توصيل الطلبات وكل شي</h1>
-        <p class="lead">Rahad Comfort food delivery service and everything — سياسة الخصوصية لتطبيق توصيل الطلبات وكل شي</p>
-        <div class="meta">تاريخ السريان: <strong>2026-09-23</strong></div>
+        <h1>سياسة الخصوصية — راحة توصيل الطعام وكل شيء</h1>
+        <p class="lead">The convenience of food delivery and everything else — سياسة الخصوصية لتطبيق توصيل الطعام وكل شيء</p>
+        <div class="meta">تاريخ السريان: <strong>2025-11-06</strong></div>
       </div>
     </header>
 
     <article class="card">
       <h2>مقدمة</h2>
-      <p>تطبيق <strong>راحه توصيل الطلبات وكل شي</strong> (بالإنجليزية: <strong>Rahad Comfort food delivery service and everything</strong>) هو تطبيق مخصص لتوصيل الطلبات (طعام، منتجات، مستلزمات). تم تطوير التطبيق بواسطة ahmedengnerr@gmail.com ويُقدَّم كخدمة تجارية. باستخدامك للتطبيق، فإنك توافق على شروط سياسة الخصوصية هذه.</p>
+      <p>تطبيق <strong>راحة توصيل الطعام وكل شيء</strong> (بالإنجليزية: <strong>The convenience of food delivery and everything else</strong>) هو تطبيق مخصص لتوصيل الطلبات (طعام، منتجات، مستلزمات). تم تطوير التطبيق بواسطة <strong>صلاح قايد محمد العواضي</strong> ويُقدَّم كخدمة تجارية. باستخدامك للتطبيق، فإنك توافق على شروط سياسة الخصوصية هذه.</p>
 
       <h2>1. جمع المعلومات واستخدامها</h2>
       <p>يجمع التطبيق بيانات معينة عند تنزيله واستخدامه، ومنها:</p>
@@ -43,8 +43,8 @@
         <li>عنوان بروتوكول الإنترنت (IP).</li>
         <li>الصفحات والوظائف التي تستخدمها داخل التطبيق، ووقت وتاريخ الزيارة.</li>
         <li>نظام التشغيل ونوع الجهاز.</li>
-        <li>بيانات الموقع الجغرافي (GPS أو الشبكات) لتفعيل ميزات التتبع والتوصيل.</li>
-        <li>بيانات تعريف شخصية تُزوَّد طواعية مثل الاسم، رقم الهاتف، العنوان لإتمام الطلبات.</li>
+        <li>بيانات الموقع الجغرافي الدقيق (GPS) لتفعيل ميزات التتبع والتوصيل. **نحن نجمع هذه البيانات لتمكين وظائف أساسية في التطبيق مثل تتبع موقع التوصيل وتحديد أقرب مقدمي الخدمة**.</li>
+        <li>بيانات تعريف شخصية تُزوَّد طواعية مثل الاسم، رقم الهاتف، والعنوان لإتمام الطلبات.</li>
       </ul>
 
       <h2>2. استخدام المعلومات</h2>
@@ -57,56 +57,32 @@
 
       <h2>3. مشاركة البيانات مع جهات خارجية</h2>
       <p>قد نشارك بياناتك مع: مزوّدي خدمات الطرف الثالث (مثل خدمات تشغيل التطبيقات والتحليلات)، شركاء التوصيل والمطاعم لإتمام الطلبات، والجهات القانونية عند الاقتضاء. نحرص أن يلتزم مقدمو الخدمات وباقي الشركاء بمعايير أمان وخصوصية مناسبة.</p>
+      <p>يعتمد تطبيقنا على خدمات مقدمة من أطراف ثالثة قد تجمع معلومات تستخدم لتعريفك. على وجه الخصوص، يستخدم التطبيق **خدمات Google Play**. نوصي بالاطلاع على سياسة الخصوصية الخاصة بهم لفهم كيفية تعاملهم مع البيانات. يمكنك العثور عليها هنا: <a class="link" href="https://www.google.com/policies/privacy/">سياسة خصوصية Google</a>.</p>
 
-      <h2>4. ملفات تعريف الارتباط والتقنيات المماثلة</h2>
-      <p>قد يستخدم التطبيق أو مزودو الطرف الثالث ملفات تعريف الارتباط (Cookies) وتقنيات مشابهة لتخزين تفضيلات المستخدم وتحسين تجربة الاستخدام. يمكنك إدارة إعدادات ملفات تعريف الارتباط من جهازك.</p>
-
-      <h2>5. حقوق المستخدم</h2>
+      <h2>4. حقوق المستخدم وحذف البيانات</h2>
       <p>لديك الحقوق التالية بخصوص بياناتك:</p>
       <ul>
         <li>طلب نسخة من بياناتك المخزنة لدينا.</li>
         <li>تصحيح أو تحديث بياناتك الشخصية.</li>
-        <li>طلب حذف بياناتك.</li>
-        <li>إيقاف تلقي الرسائل الترويجية عبر إعدادات التطبيق أو بالاتصال بنا.</li>
+        <li>**طلب حذف حسابك وبياناتك:** يمكنك طلب حذف حسابك وبياناتك نهائيًا من خلال زيارة الرابط التالي واتباع الخطوات: <a href="https://rahadelivery.netlify.app/a.html" class="link">رابط حذف الحساب</a>.</li>
+        <li>إيقاف تلقي الرسائل الترويجية.</li>
       </ul>
 
-      <h2>6. سياسة الاحتفاظ بالبيانات</h2>
-      <p>نحتفظ بالبيانات طوال فترة استخدامك للتطبيق وللمدة المعقولة اللازمة بعد ذلك لتحقيق الأغراض المشروعة أو للامتثال للقوانين. إذا رغبت في حذف بياناتك مبكرًا، تواصل معنا عبر البريد الإلكتروني أدناه.</p>
+      <h2>5. سياسة الاحتفاظ بالبيانات</h2>
+      <p>نحتفظ بالبيانات طوال فترة استخدامك للتطبيق وللمدة المعقولة اللازمة بعد ذلك لتحقيق الأغراض المشروعة أو للامتثال للقوانين. عند طلب حذف حسابك، سيتم حذف بياناتك الشخصية بشكل دائم وفقًا للإجراءات الموضحة في صفحة الحذف.</p>
 
-      <h2>7. الأطفال</h2>
+      <h2>6. خصوصية الأطفال</h2>
       <p>لا يستهدف التطبيق الأطفال دون سن 13 عامًا ولا يجمع بياناتهم عمدًا. إذا علمنا أن طفلاً دون السن القانوني قدم بيانات شخصية، سنقوم بحذفها فورًا بعد التحقق.</p>
 
-      <h2>8. الأمان</h2>
+      <h2>7. الأمان</h2>
       <p>نطبق تدابير تقنية وتنظيمية لحماية بياناتك مثل التشفير، التحكم بالوصول، وإجراءات داخلية للحد من الوصول غير المصرح به. ومع ذلك، لا يمكن ضمان الأمان بنسبة 100% في جميع الظروف.</p>
 
-      <h2>9. التغييرات على سياسة الخصوصية</h2>
+      <h2>8. التغييرات على سياسة الخصوصية</h2>
       <p>قد تُحدَّث هذه السياسة من وقت لآخر. في حال تغيير أي سياسات جوهرية سنعلم المستخدمين عبر التطبيق أو البريد الإلكتروني. استمرار استخدامك للتطبيق بعد التحديث يعني موافقتك على الإصدارات الجديدة.</p>
 
-      <h2>10. الاتصال بنا</h2>
-      <p>للاستفسارات أو طلبات الوصول/الحذف أو أي استفسار بخصوص البيانات، الرجاء التواصل عبر البريد الإلكتروني:</p>
-      <pre>ahmedengnerr@gmail.com</pre>
-
-      <footer>
-        <p class="meta">سياسة الخصوصية هذه سارية اعتبارًا من <strong>2026-09-23</strong>.</p>
-      </footer>
-
-      <section class="en">
-        <h2>Privacy Policy — Rahad Delivery (English summary)</h2>
-        <p><strong>Rahad Delivery</strong> is a delivery app for orders (food, products, supplies) developed by Ahmed. By using the app you agree to this privacy policy.</p>
-        <h3>Data Collected</h3>
-        <ul>
-          <li>IP address, app pages visited and timestamps, OS and device type, location data, and user-provided personal details (name, phone, address) for order fulfillment.</li>
-        </ul>
-        <h3>How We Use Data</h3>
-        <ul>
-          <li>Provide and operate services, personalize content, improve app performance via analytics, and protect against fraud and abuse.</li>
-        </ul>
-        <h3>Sharing</h3>
-        <p>We may share data with third-party service providers, delivery partners and restaurants to fulfill orders, and legal authorities if required.</p>
-        <h3>User Rights</h3>
-        <p>Users can request access, correction, deletion of their data, and opt out of marketing communications.</p>
-        <p>Contact: <a class="link" href="mailto:ahmedengnerr@gmail.com">ahmedengnerr@gmail.com</a></p>
-      </section>
+      <h2>9. الاتصال بنا</h2>
+      <p>للاستفسارات العامة، يمكنك التواصل معنا عبر البريد الإلكتروني: <pre>rahadeliveryslah@gmail.com</pre></p>
+      <p>لطلب حذف حسابك وبياناتك، يرجى استخدام الرابط المخصص لذلك: <a href="https://rahadelivery.netlify.app/a.html" class="link">https://rahadelivery.netlify.app/a.html</a></p>
 
     </article>
   </div>
