--- a/index.html
+++ b/index.html
@@ -3,87 +3,88 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>سياسة الخصوصية — راحة توصيل الطعام وكل شيء</title>
+  <title> سياسة الخصوصية — راحة توصيل الطعام وكل شيء / The convenience of food delivery and everything else</title>
   <style>
-    body { font-family: Tahoma, Arial, sans-serif; line-height: 1.6; padding: 20px; background-color: #f8fafc; color: #1a202c; }
-    .container { max-width: 900px; margin: 0 auto; background-color: #ffffff; padding: 24px; border-radius: 12px; box-shadow: 0 6px 18px rgba(2,6,23,0.06); }
-    h1, h2, h3 { color: #2d3748; border-bottom: 2px solid #e2e8f0; padding-bottom: 8px; margin-top: 24px; }
-    h1 { font-size: 24px; }
-    h2 { font-size: 20px; }
-    h3 { font-size: 18px; border-bottom: none; }
-    p, li { color: #4a5568; }
-    strong { color: #2d3748; }
-    a { color: #0b74da; text-decoration: none; }
-    pre { background-color: #f1f5f9; padding: 12px; border-radius: 8px; white-space: pre-wrap; word-break: break-word; direction: ltr; text-align: left; }
-    .meta { font-size: 14px; color: #6b7280; margin-bottom: 20px; }
+    :root{--bg:#f8fafc;--card:#ffffff;--accent:#0b74da;--muted:#6b7280}
+    body{font-family:Tahoma, Arial, Helvetica, sans-serif;background:var(--bg);margin:0;padding:24px;color:#0f172a}
+    .container{max-width:900px;margin:0 auto}
+    header{display:flex;align-items:center;gap:16px}
+    .logo{width:64px;height:64px;border-radius:12px;background:linear-gradient(135deg,#06b6d4,#0ea5a3);display:flex;align-items:center;justify-content:center;color:white;font-weight:700}
+    h1{margin:8px 0 6px;font-size:20px}
+    p.lead{margin:0;color:var(--muted)}
+    .card{background:var(--card);padding:20px;border-radius:12px;box-shadow:0 6px 18px rgba(2,6,23,0.06);margin-top:18px}
+    h2{margin-top:18px}
+    ul{padding-inline-start:18px}
+    .meta{font-size:13px;color:var(--muted)}
+    footer{margin-top:18px;font-size:13px;color:var(--muted)}
+    .en{direction:ltr;text-align:left;border-top:1px dashed #e6eef8;margin-top:18px;padding-top:12px}
+    a.link{color:var(--accent);text-decoration:none}
+    pre{white-space:pre-wrap;word-break:break-word;background:#f1f5f9;padding:12px;border-radius:8px}
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>سياسة الخصوصية</h1>
-    <p class="meta">آخر تحديث: 6 نوفمبر 2025</p>
+    <header>
+      <div class="logo">R</div>
+      <div>
+        <h1>سياسة الخصوصية — راحة توصيل الطعام وكل شيء</h1>
+        <p class="lead">The convenience of food delivery and everything else — سياسة الخصوصية لتطبيق توصيل الطعام وكل شيء</p>
+        <div class="meta">تاريخ السريان: <strong>2025-11-06</strong></div>
+      </div>
+    </header>
 
-    <p>نحن في تطبيق ("<strong>راحة توصيل الطعام وكل شيء</strong> ")، الذي طوره <strong>صلاح قايد محمد العواضي</strong>، نحترم خصوصية مستخدمينا. توضح سياسة الخصوصية هذه كيفية جمعنا واستخدامنا والإفصاح عن معلوماتك وحمايتها عند استخدامك لتطبيقنا. يرجى قراءة سياسة الخصوصية هذه بعناية. <strong>إذا كنت لا توافق على شروط هذه السياسة، يُرجى عدم الوصول إلى التطبيق.</strong></p>
-    <p>نحتفظ بالحق في إجراء تغييرات على سياسة الخصوصية هذه في أي وقت. سنخطرك بأي تغييرات من خلال تحديث تاريخ "آخر تحديث". إن استمرارك في استخدام التطبيق بعد نشر أي تعديلات يُعتبر موافقة منك على أحكامها.</p>
+    <article class="card">
+      <h2>مقدمة</h2>
+      <p>تطبيق <strong>راحة توصيل الطعام وكل شيء</strong> (بالإنجليزية: <strong>The convenience of food delivery and everything else</strong>) هو تطبيق مخصص لتوصيل الطلبات (طعام، منتجات، مستلزمات). تم تطوير التطبيق بواسطة <strong>صلاح قايد محمد العواضي</strong> ويُقدَّم كخدمة تجارية. باستخدامك للتطبيق، فإنك توافق على شروط سياسة الخصوصية هذه.</p>
 
-    <h2>جمع معلوماتك</h2>
-    <p>قد نجمع معلومات عنك بعدة طرق لتقديم وتشغيل خدماتنا. تشمل هذه المعلومات ما يلي:</p>
+      <h2>1. جمع المعلومات واستخدامها</h2>
+      <p>يجمع التطبيق بيانات معينة عند تنزيله واستخدامه، ومنها:</p>
+      <ul>
+        <li>عنوان بروتوكول الإنترنت (IP).</li>
+        <li>الصفحات والوظائف التي تستخدمها داخل التطبيق، ووقت وتاريخ الزيارة.</li>
+        <li>نظام التشغيل ونوع الجهاز.</li>
+        <li>بيانات الموقع الجغرافي الدقيق (GPS) لتفعيل ميزات التتبع والتوصيل. **نحن نجمع هذه البيانات لتمكين وظائف أساسية في التطبيق مثل تتبع موقع التوصيل وتحديد أقرب مقدمي الخدمة**.</li>
+        <li>بيانات تعريف شخصية تُزوَّد طواعية مثل الاسم، رقم الهاتف، والعنوان لإتمام الطلبات.</li>
+      </ul>
 
-    <h3>1. البيانات الشخصية</h3>
-    <p>معلومات تعريفية تقدمها طوعًا عند التسجيل أو الطلب، مثل: الاسم، رقم الهاتف، وعنوان التوصيل.</p>
+      <h2>2. استخدام المعلومات</h2>
+      <ul>
+        <li>تشغيل الخدمات وتمكين إنشاء وتتبع الطلبات.</li>
+        <li>تخصيص المحتوى وتقديم عروض مناسبة لموقعك واهتماماتك.</li>
+        <li>التحليلات المبنية على بيانات مجهولة المصدر لتحسين أداء التطبيق.</li>
+        <li>أغراض الأمان والكشف عن الاحتيال وحماية الحسابات.</li>
+      </ul>
 
-    <h3>2. معلومات الموقع الجغرافي</h3>
-    <p>نطلب إذن الوصول إلى موقعك الجغرافي الدقيق (GPS) لتمكين وظائف التوصيل الأساسية. قد يتم جمع هذه البيانات حتى عندما يكون التطبيق مغلقًا أو غير مستخدم (في الخلفية) أثناء عمليات التوصيل النشطة فقط، وذلك للأغراض التالية:</p>
-    <ul>
-      <li>تتبع مسار المندوب لتوفير وقت وصول دقيق للعميل.</li>
-      <li>مساعدة فريق العمل في إسناد الطلبات للمناديب الأقرب جغرافيًا.</li>
-      <li>تحسين كفاءة عملية التوصيل بشكل عام.</li>
-    </ul>
-    <p>يمكنك تعديل أذونات الموقع في أي وقت من إعدادات جهازك، لكن ذلك قد يؤثر على قدرتك على استخدام خدمات التوصيل.</p>
+      <h2>3. مشاركة البيانات مع جهات خارجية</h2>
+      <p>قد نشارك بياناتك مع: مزوّدي خدمات الطرف الثالث (مثل خدمات تشغيل التطبيقات والتحليلات)، شركاء التوصيل والمطاعم لإتمام الطلبات، والجهات القانونية عند الاقتضاء. نحرص أن يلتزم مقدمو الخدمات وباقي الشركاء بمعايير أمان وخصوصية مناسبة.</p>
+      <p>يعتمد تطبيقنا على خدمات مقدمة من أطراف ثالثة قد تجمع معلومات تستخدم لتعريفك. على وجه الخصوص، يستخدم التطبيق **خدمات Google Play**. نوصي بالاطلاع على سياسة الخصوصية الخاصة بهم لفهم كيفية تعاملهم مع البيانات. يمكنك العثور عليها هنا: <a class="link" href="https://www.google.com/policies/privacy/">سياسة خصوصية Google</a>.</p>
 
-    <h3>3. بيانات الجهاز والاستخدام</h3>
-    <p>معلومات يتم جمعها تلقائيًا عند استخدامك للتطبيق، مثل عنوان IP، طراز الجهاز، إصدار نظام التشغيل، والصفحات التي تزورها داخل التطبيق.</p>
+      <h2>4. حقوق المستخدم وحذف البيانات</h2>
+      <p>لديك الحقوق التالية بخصوص بياناتك:</p>
+      <ul>
+        <li>طلب نسخة من بياناتك المخزنة لدينا.</li>
+        <li>تصحيح أو تحديث بياناتك الشخصية.</li>
+        <li>**طلب حذف حسابك وبياناتك:** يمكنك طلب حذف حسابك وبياناتك نهائيًا من خلال زيارة الرابط التالي واتباع الخطوات: <a href="https://rahadelivery.netlify.app/a.html" class="link">رابط حذف الحساب</a>.</li>
+        <li>إيقاف تلقي الرسائل الترويجية.</li>
+      </ul>
 
-    <h2>استخدام معلوماتك</h2>
-    <p>يساعدنا امتلاك معلومات دقيقة عنك في تزويدك بتجربة سلسة وفعالة. قد نستخدم المعلومات التي نجمعها عنك في:</p>
-    <ul>
-      <li>إنشاء وإدارة حسابك.</li>
-      <li>معالجة الطلبات وتسهيل عملية التوصيل.</li>
-      <li>تحسين كفاءة وأداء التطبيق.</li>
-      <li>إرسال إشعارات حول حالة حسابك أو طلبك.</li>
-      <li>تحليل الاستخدام والاتجاهات لتحسين تجربتك.</li>
-      <li>حل المشكلات والاستجابة لطلبات الدعم.</li>
-    </ul>
+      <h2>5. سياسة الاحتفاظ بالبيانات</h2>
+      <p>نحتفظ بالبيانات طوال فترة استخدامك للتطبيق وللمدة المعقولة اللازمة بعد ذلك لتحقيق الأغراض المشروعة أو للامتثال للقوانين. عند طلب حذف حسابك، سيتم حذف بياناتك الشخصية بشكل دائم وفقًا للإجراءات الموضحة في صفحة الحذف.</p>
 
-    <h2>الإفصاح عن معلوماتك</h2>
-    <p>قد نشارك معلوماتك في بعض الحالات المحددة كما يلي:</p>
-    <ul>
-      <li><strong>بموجب القانون أو لحماية الحقوق:</strong> إذا كان ذلك ضروريًا للامتثال للإجراءات القانونية أو لحماية حقوقنا وسلامة الآخرين.</li>
-      <li><strong>مقدمو الخدمات الخارجيون:</strong> مع أطراف ثالثة تقدم خدمات نيابةً عنا، مثل شركاء التوصيل، المطاعم، خدمات تحليل البيانات، وخدمات تشغيل الخوادم.</li>
-      <li><strong>خدمات Google Play:</strong> يعتمد تطبيقنا على خدمات مقدمة من Google Play. نوصي بالاطلاع على <a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">سياسة خصوصية Google</a>.</li>
-    </ul>
+      <h2>6. خصوصية الأطفال</h2>
+      <p>نحن لا نجمع عمدًا بيانات من الأطفال دون سن 13 عامًا. إذا علمت بأننا جمعنا بيانات من طفل، يُرجى التواصل معنا لإزالتها.</p>
 
-    <h2>تقنيات التتبع</h2>
-    <p>قد نستخدم ملفات تعريف الارتباط (Cookies ) أو معرفات الأجهزة الفريدة وتقنيات تتبع مشابهة للمساعدة في تخصيص التطبيق وتحسين تجربتك. هذه التقنيات لا تجمع بيانات شخصية.</p>
+      <h2>7. الأمان</h2>
+      <p>نطبق تدابير تقنية وتنظيمية لحماية بياناتك مثل التشفير، التحكم بالوصول، وإجراءات داخلية للحد من الوصول غير المصرح به. ومع ذلك، لا يمكن ضمان الأمان بنسبة 100% في جميع الظروف.</p>
 
-    <h2>أمان معلوماتك</h2>
-    <p>نستخدم تدابير إدارية وتقنية ومادية لحماية معلوماتك الشخصية. ومع ذلك، لا توجد طريقة نقل عبر الإنترنت آمنة 100%، ولا يمكننا ضمان الأمان المطلق.</p>
+      <h2>8. التغييرات على سياسة الخصوصية</h2>
+      <p>قد تُحدَّث هذه السياسة من وقت لآخر. في حال تغيير أي سياسات جوهرية سنعلم المستخدمين عبر التطبيق أو البريد الإلكتروني. استمرار استخدامك للتطبيق بعد التحديث يعني موافقتك على الإصدارات الجديدة.</p>
 
-    <h2>سياسة الأطفال</h2>
-    <p>خدماتنا لا تستهدف الأطفال دون سن 13 عامًا، ولا نجمع بيانات منهم عن علم. إذا علمت بأننا جمعنا بيانات من طفل، يُرجى التواصل معنا لإزالتها فورًا.</p>
+      <h2>9. الاتصال بنا</h2>
+      <p>للاستفسارات العامة، يمكنك التواصل معنا عبر البريد الإلكتروني: <pre>rahadeliveryslah@gmail.com</pre></p>
+      <p>لطلب حذف حسابك وبياناتك، يرجى استخدام الرابط المخصص لذلك: <a href="https://rahadelivery.netlify.app/a.html" class="link">https://rahadelivery.netlify.app/a.html</a></p>
 
-    <h2>خياراتك بخصوص معلوماتك</h2>
-    <h3>1. معلومات الحساب</h3>
-    <p>يمكنك في أي وقت مراجعة أو تعديل معلومات حسابك من خلال إعدادات الملف الشخصي داخل التطبيق.</p>
-
-    <h3>2. حذف الحساب</h3>
-    <p>يمكنك طلب حذف حسابك وبياناتك نهائيًا من خلال زيارة الرابط التالي واتباع الخطوات:</p>
-    <p><a href="https://rahadelivery.netlify.app/a.html" target="_blank" rel="noopener noreferrer">https://rahadelivery.netlify.app/a.html</a></p>
-    <p>عند حذف حسابك، سيتم إزالة معلوماتك الشخصية (الاسم، رقم الهاتف، العناوين ) من قواعد بياناتنا النشطة. قد نحتفظ ببعض البيانات غير الشخصية (مثل سجلات الطلبات المجهولة) لأغراض التحليل أو الامتثال للمتطلبات القانونية.</p>
-
-    <h2>تواصل معنا</h2>
-    <p>إذا كان لديك أي أسئلة أو ملاحظات حول سياسة الخصوصية هذه، يمكنك التواصل معنا عبر:</p>
-    <pre>rahadeliveryslah@gmail.com</pre>
+    </article>
   </div>
 </body>
 </html>
