--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
       <h2>9. الاتصال بنا</h2>
       <p>للاستفسارات العامة، يمكنك التواصل معنا عبر البريد الإلكتروني: <pre>rahadeliveryslah@gmail.com</pre></p>
-      <p>لطلب حذف حسابك وبياناتك، يرجى استخدام الرابط المخصص لذلك: <a href="https://rahadelivery.netlify.app/a.html" class="link">https://rahadelivery.netlify.app/a.html</a></p>
+      <p>لطلب حذف حسابك وبياناتك، يرجى استخدام الرابط المخصص لذلك: <a href="https://device-streaming-c1fcc682.web.app" class="link">حذف الحساب</a></p>
 
     </article>
   </div>
