--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <ul>
         <li>طلب نسخة من بياناتك المخزنة لدينا.</li>
         <li>تصحيح أو تحديث بياناتك الشخصية.</li>
-        <li>**طلب حذف حسابك وبياناتك:** يمكنك طلب حذف حسابك وبياناتك نهائيًا من خلال زيارة الرابط التالي واتباع الخطوات: <a href="https://rahadelivery.netlify.app/a.html" class="link">رابط حذف الحساب</a>.</li>
+        <li>**طلب حذف حسابك وبياناتك:** يمكنك طلب حذف حسابك وبياناتك نهائيًا من خلال زيارة الرابط التالي واتباع الخطوات: <a href="https://device-streaming-c1fcc682.web.app" class="link">رابط حذف الحساب</a>.</li>
         <li>إيقاف تلقي الرسائل الترويجية.</li>
       </ul>
 
