--- a/index.html
+++ b/index.html
@@ -3,86 +3,92 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title> سياسة الخصوصية — راحة توصيل الطعام وكل شيء / The convenience of food delivery and everything else</title>
+  <title>سياسة الخصوصية — راحة توصيل الطعام وكل شيء</title>
   <style>
     :root{--bg:#f8fafc;--card:#ffffff;--accent:#0b74da;--muted:#6b7280}
     body{font-family:Tahoma, Arial, Helvetica, sans-serif;background:var(--bg);margin:0;padding:24px;color:#0f172a}
     .container{max-width:900px;margin:0 auto}
-    header{display:flex;align-items:center;gap:16px}
-    .logo{width:64px;height:64px;border-radius:12px;background:linear-gradient(135deg,#06b6d4,#0ea5a3);display:flex;align-items:center;justify-content:center;color:white;font-weight:700}
-    h1{margin:8px 0 6px;font-size:20px}
-    p.lead{margin:0;color:var(--muted)}
     .card{background:var(--card);padding:20px;border-radius:12px;box-shadow:0 6px 18px rgba(2,6,23,0.06);margin-top:18px}
-    h2{margin-top:18px}
-    ul{padding-inline-start:18px}
-    .meta{font-size:13px;color:var(--muted)}
-    footer{margin-top:18px;font-size:13px;color:var(--muted)}
-    .en{direction:ltr;text-align:left;border-top:1px dashed #e6eef8;margin-top:18px;padding-top:12px}
-    a.link{color:var(--accent);text-decoration:none}
-    pre{white-space:pre-wrap;word-break:break-word;background:#f1f5f9;padding:12px;border-radius:8px}
+    h2{font-weight:600;margin-top:22px;margin-bottom:8px;font-size:1.25rem}
+    h3{font-weight:600;margin-top:18px;margin-bottom:6px;font-size:1.1rem}
+    ul{padding-inline-start:20px;line-height:1.6}
+    p{line-height:1.6}
+    .meta{font-size:13px;color:var(--muted);margin-top:8px}
+    a.link{color:var(--accent);text-decoration:none;font-weight:600}
+    a.link:hover{text-decoration:underline}
+    pre{white-space:pre-wrap;word-break:break-word;background:#f1f5f9;padding:12px;border-radius:8px;font-size:14px}
   </style>
 </head>
 <body>
   <div class="container">
-    <header>
-      <div class="logo">R</div>
-      <div>
-        <h1>سياسة الخصوصية — راحة توصيل الطعام وكل شيء</h1>
-        <p class="lead">The convenience of food delivery and everything else — سياسة الخصوصية لتطبيق توصيل الطعام وكل شيء</p>
-        <div class="meta">تاريخ السريان: <strong>2025-11-06</strong></div>
-      </div>
-    </header>
-
     <article class="card">
+      <h1 style="text-align:center; font-size:1.75rem;">سياسة الخصوصية لتطبيق "راحة"</h1>
+      <p class="meta" style="text-align:center;">آخر تحديث: 6 نوفمبر 2025</p>
+
       <h2>مقدمة</h2>
-      <p>تطبيق <strong>راحة توصيل الطعام وكل شيء</strong> (بالإنجليزية: <strong>The convenience of food delivery and everything else</strong>) هو تطبيق مخصص لتوصيل الطلبات (طعام، منتجات، مستلزمات). تم تطوير التطبيق بواسطة <strong>صلاح قايد محمد العواضي</strong> ويُقدَّم كخدمة تجارية. باستخدامك للتطبيق، فإنك توافق على شروط سياسة الخصوصية هذه.</p>
+      <p>نحن في تطبيق <strong>راحة توصيل الطعام وكل شيء</strong> ("التطبيق")، الذي طوره <strong>صلاح قايد محمد العواضي</strong>، نحترم خصوصيتك ونلتزم بحمايتها. توضح سياسة الخصوصية هذه كيفية جمعنا واستخدامنا والإفصاح عن معلوماتك عند استخدامك لتطبيقنا.</p>
+      <p><strong>يرجى قراءة سياسة الخصوصية هذه بعناية. إذا كنت لا توافق على شروطها، فيجب عليك عدم استخدام التطبيق.</strong></p>
+      <p>نحتفظ بالحق في إجراء تغييرات على هذه السياسة في أي وقت. سنخطرك بأي تغييرات من خلال تحديث تاريخ "آخر تحديث" أعلاه. استمرارك في استخدام التطبيق بعد نشر أي تعديلات يعني أنك على علم بها وموافق عليها.</p>
 
-      <h2>1. جمع المعلومات واستخدامها</h2>
-      <p>يجمع التطبيق بيانات معينة عند تنزيله واستخدامه، ومنها:</p>
+      <h2>جمع معلوماتك</h2>
+      <p>قد نجمع معلومات عنك بعدة طرق. تعتمد المعلومات التي نجمعها على الخدمات التي تستخدمها، وتشمل ما يلي:</p>
+      
+      <h3>1. البيانات الشخصية</h3>
+      <p>هي معلومات التعريف التي تقدمها طوعًا عند التسجيل أو إجراء طلب، مثل:</p>
       <ul>
-        <li>عنوان بروتوكول الإنترنت (IP).</li>
-        <li>الصفحات والوظائف التي تستخدمها داخل التطبيق، ووقت وتاريخ الزيارة.</li>
-        <li>نظام التشغيل ونوع الجهاز.</li>
-        <li>بيانات الموقع الجغرافي الدقيق (GPS) لتفعيل ميزات التتبع والتوصيل. **نحن نجمع هذه البيانات لتمكين وظائف أساسية في التطبيق مثل تتبع موقع التوصيل وتحديد أقرب مقدمي الخدمة**.</li>
-        <li>بيانات تعريف شخصية تُزوَّد طواعية مثل الاسم، رقم الهاتف، والعنوان لإتمام الطلبات.</li>
+        <li>الاسم الكامل</li>
+        <li>رقم الهاتف</li>
+        <li>عناوين التوصيل المحفوظة</li>
       </ul>
 
-      <h2>2. استخدام المعلومات</h2>
+      <h3>2. معلومات الموقع الجغرافي</h3>
+      <p>قد نطلب إذن الوصول إلى موقعك الجغرافي الدقيق (GPS) من جهازك، حتى عندما يكون التطبيق في الخلفية، وذلك لتقديم خدمات التوصيل الأساسية. يجمع تطبيقنا بيانات الموقع للأغراض التالية فقط:</p>
       <ul>
-        <li>تشغيل الخدمات وتمكين إنشاء وتتبع الطلبات.</li>
-        <li>تخصيص المحتوى وتقديم عروض مناسبة لموقعك واهتماماتك.</li>
-        <li>التحليلات المبنية على بيانات مجهولة المصدر لتحسين أداء التطبيق.</li>
-        <li>أغراض الأمان والكشف عن الاحتيال وحماية الحسابات.</li>
+        <li><strong>للعملاء:</strong> لتحديد عنوان التوصيل بدقة وعرض المطاعم والمتاجر القريبة.</li>
+        <li><strong>للسائقين (كباتن التوصيل):</strong> لتتبع مسار التوصيل النشط، وتوفير وقت وصول تقديري دقيق للعميل، ومساعدة المشرفين في إسناد الطلبات بكفاءة.</li>
+      </ul>
+      <p><strong>ملاحظة هامة:</strong> لا يتم جمع بيانات الموقع خارج فترات التوصيل النشطة، ولا يتم بيعها أو مشاركتها لأغراض إعلانية. يمكنك التحكم في هذه الأذونات من إعدادات جهازك.</p>
+
+      <h3>3. بيانات الجهاز والاستخدام</h3>
+      <p>نجمع تلقائيًا معلومات عن جهازك وكيفية استخدامك للتطبيق، مثل: رقم تعريف الجهاز، نوع نظام التشغيل، عنوان IP، والصفحات التي تزورها داخل التطبيق. نستخدم هذه البيانات لتحسين أداء التطبيق وحل المشاكل التقنية.</p>
+
+      <h2>استخدام معلوماتك</h2>
+      <p>يساعدنا امتلاك معلومات دقيقة عنك في تزويدك بتجربة سلسة ومخصصة. نستخدم المعلومات التي نجمعها في الأغراض التالية:</p>
+      <ul>
+        <li>إنشاء وإدارة حسابك.</li>
+        <li>معالجة طلباتك وتسهيل عمليات التوصيل.</li>
+        <li>تحسين كفاءة وأداء التطبيق.</li>
+        <li>إرسال إشعارات حول حالة حسابك أو طلباتك.</li>
+        <li>تحليل الاستخدام والاتجاهات لتحسين تجربتك.</li>
+        <li>التواصل معك للحصول على ملاحظاتك أو لحل المشكلات.</li>
+        <li>منع الأنشطة الاحتيالية وحماية أمان منصتنا.</li>
       </ul>
 
-      <h2>3. مشاركة البيانات مع جهات خارجية</h2>
-      <p>قد نشارك بياناتك مع: مزوّدي خدمات الطرف الثالث (مثل خدمات تشغيل التطبيقات والتحليلات)، شركاء التوصيل والمطاعم لإتمام الطلبات، والجهات القانونية عند الاقتضاء. نحرص أن يلتزم مقدمو الخدمات وباقي الشركاء بمعايير أمان وخصوصية مناسبة.</p>
-      <p>يعتمد تطبيقنا على خدمات مقدمة من أطراف ثالثة قد تجمع معلومات تستخدم لتعريفك. على وجه الخصوص، يستخدم التطبيق **خدمات Google Play**. نوصي بالاطلاع على سياسة الخصوصية الخاصة بهم لفهم كيفية تعاملهم مع البيانات. يمكنك العثور عليها هنا: <a class="link" href="https://www.google.com/policies/privacy/">سياسة خصوصية Google</a>.</p>
-
-      <h2>4. حقوق المستخدم وحذف البيانات</h2>
-      <p>لديك الحقوق التالية بخصوص بياناتك:</p>
+      <h2>الإفصاح عن معلوماتك</h2>
+      <p>قد نشارك معلوماتك التي نجمعها في بعض الحالات المحددة:</p>
       <ul>
-        <li>طلب نسخة من بياناتك المخزنة لدينا.</li>
-        <li>تصحيح أو تحديث بياناتك الشخصية.</li>
-        <li>**طلب حذف حسابك وبياناتك:** يمكنك طلب حذف حسابك وبياناتك نهائيًا من خلال زيارة الرابط التالي واتباع الخطوات: <a href="https://device-streaming-c1fcc682.web.app" class="link">رابط حذف الحساب</a>.</li>
-        <li>إيقاف تلقي الرسائل الترويجية.</li>
+        <li><strong>بموجب القانون أو لحماية الحقوق:</strong> إذا كان الإفصاح ضروريًا للامتثال لإجراء قانوني أو لحماية حقوقنا وسلامة مستخدمينا.</li>
+        <li><strong>مقدمو الخدمات الخارجيون:</strong> نشارك المعلومات مع أطراف ثالثة تقدم خدمات نيابةً عنا، مثل تحليل البيانات، استضافة الخوادم، وخدمة العملاء.</li>
+        <li><strong>شركاء التوصيل والمطاعم:</strong> نشارك تفاصيل الطلب الضرورية (مثل الأصناف وعنوان التوصيل) مع المطاعم والسائقين لإتمام عملية التوصيل.</li>
+        <li><strong>خدمات التحليل:</strong> قد نتعاون مع مزودي خدمات تحليل مثل Google Analytics for Firebase لفهم كيفية استخدام التطبيق. باستخدامك للتطبيق، فإنك توافق على جمع هذه البيانات وفقًا لسياساتهم.</li>
       </ul>
 
-      <h2>5. سياسة الاحتفاظ بالبيانات</h2>
-      <p>نحتفظ بالبيانات طوال فترة استخدامك للتطبيق وللمدة المعقولة اللازمة بعد ذلك لتحقيق الأغراض المشروعة أو للامتثال للقوانين. عند طلب حذف حسابك، سيتم حذف بياناتك الشخصية بشكل دائم وفقًا للإجراءات الموضحة في صفحة الحذف.</p>
+      <h2>أمان معلوماتك</h2>
+      <p>نحن نستخدم تدابير إدارية وتقنية لحماية معلوماتك الشخصية. ومع ذلك، لا يمكن ضمان أمان أي بيانات مرسلة عبر الإنترنت بنسبة 100%، وأي معلومات ترسلها تكون على مسؤوليتك الخاصة.</p>
 
-      <h2>6. خصوصية الأطفال</h2>
-      <p>نحن لا نجمع عمدًا بيانات من الأطفال دون سن 13 عامًا. إذا علمت بأننا جمعنا بيانات من طفل، يُرجى التواصل معنا لإزالتها.</p>
+      <h2>حقوقك وخياراتك</h2>
+      <p>يمكنك في أي وقت مراجعة أو تعديل معلومات حسابك من خلال صفحة ملفك الشخصي داخل التطبيق.</p>
+      <h3>طلب حذف الحساب</h3>
+      <p>يمكنك طلب حذف حسابك وبياناتك نهائيًا من خلال زيارة الرابط التالي واتباع الخطوات الموضحة. عند الحذف، ستتم إزالة معلوماتك الشخصية (الاسم، رقم الهاتف، العناوين) بشكل دائم، بينما قد نحتفظ بسجلات المعاملات غير المرتبطة بك لأغراض قانونية.</p>
+      <p><a href="https://device-streaming-c1fcc682.web.app" class="link">رابط حذف الحساب والبيانات</a></p>
 
-      <h2>7. الأمان</h2>
-      <p>نطبق تدابير تقنية وتنظيمية لحماية بياناتك مثل التشفير، التحكم بالوصول، وإجراءات داخلية للحد من الوصول غير المصرح به. ومع ذلك، لا يمكن ضمان الأمان بنسبة 100% في جميع الظروف.</p>
+      <h2>سياسة الأطفال</h2>
+      <p>نحن لا نجمع عمدًا بيانات من الأطفال دون سن 13 عامًا. إذا علمت بأننا جمعنا بيانات من طفل، يُرجى التواصل معنا فورًا لإزالتها.</p>
 
-      <h2>8. التغييرات على سياسة الخصوصية</h2>
-      <p>قد تُحدَّث هذه السياسة من وقت لآخر. في حال تغيير أي سياسات جوهرية سنعلم المستخدمين عبر التطبيق أو البريد الإلكتروني. استمرار استخدامك للتطبيق بعد التحديث يعني موافقتك على الإصدارات الجديدة.</p>
-
-      <h2>9. الاتصال بنا</h2>
-      <p>للاستفسارات العامة، يمكنك التواصل معنا عبر البريد الإلكتروني: <pre>rahadeliveryslah@gmail.com</pre></p>
-
+      <h2>تواصل معنا</h2>
+      <p>إذا كان لديك أي أسئلة أو ملاحظات حول سياسة الخصوصية هذه، يمكنك التواصل معنا عبر:</p>
+      <pre>المطور: صلاح قايد محمد العواضي
+البريد الإلكتروني: rahadeliveryslah@gmail.com</pre>
     </article>
   </div>
 </body>
